@@ -67,6 +67,7 @@ xine-lib (1.1.9) (unreleased)
   * Build fix for when using Linux 2.6.23 headers. [Bug 1820958]
   * Implemented decoding of XML character entities with codes >= 256.
     This requires conversion to UTF-8 of entities with codes >= 128.
+  * Handle initial Unicde BOMs in XML; convert other UTF encodings to UTF-8.
   * Fixed ATSC support. [Bug 1749508]
   * Fixed a possible DVB plugin crash when switching channels.
   * Fixed a crash closing the frontend. [Bug FS#3]
@@ -80,6 +81,7 @@ xine-lib (1.1.9) (unreleased)
   * DXR3 encoding with external ffmpeg should be fixed now.
     (This was broken by ffmpeg revision 9283).
   * Enabled the WMV VC1 (ffmpeg) codec.
+  * Fixed a crash that happened when a video output was closed
 
 xine-lib (1.1.8)
   * Send a channel-changed event to the frontend when receiving the SYNC
